--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "6.7.2",
     "nodemon": "^2.0.1",
     "sucrase": "^3.10.1"
   },
