--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^1.19.7"
   },
   "devDependencies": {
     "eslint": "6.7.2",
     "nodemon": "^2.0.1",
+    "sequelize-cli": "^1.19.7"
     "sucrase": "^3.10.1"
   },
   "scripts": {
