--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "pg": "^7.14.0",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "@eslint/js": "^9.29.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.5.0",
+    "globals": "^16.2.0",
     "nodemon": "^2.0.1",
-    "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.10.1"
+    "prettier": "^3.5.3",
+    "sucrase": "^3.35.0"
   },
   "scripts": {
     "dev": "nodemon ./src/server.js"
