--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,4 +1,4 @@
-const { resolve } = requerie("path")
+const { resolve } = require("path")
 
 module.exports = {
   "config": resolve(__dirname, "src", "config", "database.js"),
