--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -16,6 +17,7 @@
     "globals": "^16.2.0",
     "nodemon": "^2.0.1",
     "prettier": "^3.5.3",
+    "sequelize-cli": "^6.6.3",
     "sucrase": "^3.35.0"
   },
   "scripts": {
