--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "date-fns": "^4.1.0",
     "express": "^4.17.1",
     "sequelize": "^6.37.7"
   },
