--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "express": "^4.17.1",
     "sequelize": "^6.37.7",
