--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.7",
+    "youch": "^3.3.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
