--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.37.7",
     "youch": "^3.3.4",
     "yup": "^1.6.1"
