--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "bee-queue": "^1.7.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
@@ -31,6 +32,7 @@
     "sucrase": "^3.35.0"
   },
   "scripts": {
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server.js",
+    "queue": "nodemon ./src/queue.js"
   }
 }
